style: improve table header contrast in both themes; remove link box-shadows in tables/pub items; fix light-mode pub emphasis

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -313,3 +313,6 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a,
   -webkit-transition: $global-transition;
   transition: $global-transition;
 }
+
+/* Remove underline box-shadow for links in tables and publication items to avoid black boxes on theme toggle */
+.page__content table a, .pub-item a { box-shadow: none; }
